--- a/src/styles/components/breadcrumbs.scss
+++ b/src/styles/components/breadcrumbs.scss
@@ -49,3 +49,10 @@
     padding-bottom: 3px;
   }
 }
+
+.breadcrumbs__list span {
+  color: rgba(0, 0, 0, 0.5568627451);
+  font-weight: 600;
+  padding-bottom: 3px;
+  border-bottom: 2px solid #d1a954;
+}
