--- a/src/styles/components/burger-btn.scss
+++ b/src/styles/components/burger-btn.scss
@@ -15,7 +15,7 @@
   span {
     content: '';
     position: absolute;
-    left: 25px;
+    left: 0;
     top: 0;
     height: 3px;
     width: 30px;
