--- a/src/styles/components/dropdown.scss
+++ b/src/styles/components/dropdown.scss
@@ -1,17 +1,22 @@
 .dropdown {
+  z-index: -1;
   display: none;
   position: absolute;
-  top: 28px;
-  left: 0;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 200px;
-  color: black;
-  padding: 0 7px 7px 7px;
+  top: 35px;
+  left: 0px;
+  color: #000;
+  padding: 0 10px;
+  padding-bottom: 10px;
+  padding-top: 3px;
+  background-color: #4f4e4eab;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .link__dropdown {
   padding: 10px 0;
   font-size: 16px;
+  white-space: nowrap;
 }
 
 .link__dropdown {
@@ -26,7 +31,6 @@
 }
 
 .dropdown--width {
-  width: 230px;
 }
 
 .dropdown--bcg {
