--- a/src/styles/components/header-content.scss
+++ b/src/styles/components/header-content.scss
@@ -28,6 +28,10 @@
   }
 }
 
+.header__content-product {
+  max-width: 60%;
+}
+
 .header__inner {
   padding: 20px 15px;
   background-color: rgba(51, 51, 51, 0.65);
