--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -187,3 +187,12 @@ ul {
     color: #949090;
   }
 }
+
+.text--weight {
+  font-weight: 600;
+}
+
+.text--weight--size {
+  font-size: 16px;
+  margin-bottom: 5px;
+}
