--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -65,8 +65,11 @@
 
 .modal__input {
   padding-bottom: 10px;
+  height: auto;
+  font-size: 18px;
   border: none;
   width: 70%;
+  padding-bottom: 10px;
   margin: 0 auto;
   margin-bottom: 20px;
   border-bottom: 1px solid #000;
