--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -60,3 +60,4 @@
 @import './components/breadcrumbs';
 @import './components/card';
 @import './components/modal';
+@import './components/news-page';
