corected button, add new tags

--- a/src/styles/components/scroll-btn.scss
+++ b/src/styles/components/scroll-btn.scss
@@ -5,7 +5,7 @@
   right: 20px;
   padding: 15px 30px;
   padding-left: 50px;
-  background-color: #d1a954;
+  background-color: #b47c48;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -26,7 +26,7 @@
   position: absolute;
   left: 20px; /* Змініть значення відступу, щоб підігнати стрілку */
   top: calc(50% - 8px); /* Вирівнюємо посередині відносно кнопки */
-  border: solid #b47c48;
+  border: solid #d1a954;
   border-width: 0 3px 3px 0;
   padding: 4px;
   transform: rotate(45deg);
