--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -61,3 +61,5 @@
 @import './components/card';
 @import './components/modal';
 @import './components/news-page';
+@import './components/communication';
+@import './components/button-slip';
