--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -13,16 +13,33 @@
 
 .index-video {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: 1;
+  top: 0;
+  left: 0;
+  z-index: 0;
   min-height: 100%;
   min-width: 100%;
-  height: auto;
-  width: auto;
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
   object-fit: cover;
-  transform: translate(-50%, -50%);
+
+  @include mq($from: tablet) {
+    object-fit: none;
+  }
+  @include mq($from: desktop-wide) {
+    object-fit: cover;
+  }
+}
+
+.video-overlay {
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.6), #292b2c);
+  pointer-events: none; /* Щоб накладання не блокувало кліки по відео */
 }
 
 .fullwidth-box.video-background .fullwidth-video {
@@ -105,6 +122,11 @@
     url('../img/product-individual.jpg');
   background-size: cover;
   background-position: center;
+}
+
+.a-header__background {
+  background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.6), #292b2c),
+    url('../img/about-us-header.webp');
 }
 
 .header__background-news {
