--- a/src/styles/components/swiper.scss
+++ b/src/styles/components/swiper.scss
@@ -138,3 +138,8 @@
   background-color: rgba(205, 205, 205, 0.6117647059);
   opacity: 1;
 }
+
+
+.co-news-page__container {
+  position: relative;
+}
