--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,3 +51,4 @@
 @import './components/news-page';
 @import './components/communication';
 @import './components/button-slip';
+@import './components/custom-orders.scss';
