costum orders tags

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -126,3 +126,12 @@
 .button-form {
   padding: 0 30px;
 }
+
+.co-button {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: capitalize;
+}
