--- a/src/styles/components/news-page.scss
+++ b/src/styles/components/news-page.scss
@@ -35,7 +35,7 @@
   color: #404044;
   margin-bottom: 60px;
 
-  img {
+  picture img {
     object-fit: cover;
     min-height: 130px;
     max-height: 250px;
