--- a/src/styles/components/swiper.scss
+++ b/src/styles/components/swiper.scss
@@ -139,7 +139,29 @@
   opacity: 1;
 }
 
-
 .co-news-page__container {
   position: relative;
+}
+
+.co-page__card {
+  .swiper-button-prev {
+    left: 0;
+    opacity: 0.9;
+    &:hover {
+      opacity: 1;
+      transform: translateX(0px);
+    }
+  }
+  .swiper-button-next {
+    right: 0;
+    opacity: 0.9;
+    &:hover {
+      opacity: 1;
+      transform: translateX(0px);
+    }
+  }
+}
+
+.swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
+  background-color: #6e4b4b !important;
 }
