--- a/src/styles/components/custom-orders.scss
+++ b/src/styles/components/custom-orders.scss
@@ -15,7 +15,7 @@
   position: relative;
   height: 100%;
   width: 100%;
-  width: 49%;
+  width: 100%;
   outline: 1px solid transparent;
   font-size: 0;
 
@@ -27,6 +27,12 @@
   .swiper-button-prev-10 {
     object-fit: scale-down;
   }
+
+  @include mq($from: phablet) {
+    float: right;
+    width: 47%;
+  }
+
   @include mq($from: tablet-wide) {
     float: right;
     width: 32%;
@@ -52,17 +58,17 @@
   background-color: #f6f6f6;
 
   .co-photo {
-    height: 230px;
+    height: 300px;
     object-fit: cover;
-    object-position: center;
+    object-position: top;
   }
 }
 
 .co-product__name {
   margin: 0;
   padding-top: 10px;
-  font-weight: 700;
-  font-size: 16px;
+  font-weight: 600;
+  font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: start;
@@ -70,8 +76,8 @@
   height: 30px;
   word-spacing: 0;
 
-  @include mq($from: phablet) {
-    font-size: 18px;
+  @include mq($from: tablet-wide) {
+    font-size: 21px;
   }
 }
 
@@ -102,12 +108,17 @@
 }
 
 .co-info {
-  line-height: 1.2;
-  font-size: 13px;
+  line-height: 1.3;
+  font-size: 15px;
   word-spacing: 0;
 
   @include mq($from: phablet) {
     font-size: 15px;
-    line-height: 1.2;
+  }
+
+  @include mq($from: tablet-wide) {
+    font-size: 18px;
+    line-height: 1.4;
+    word-spacing: 5px;
   }
 }
