--- a/src/styles/components/custom-orders.scss
+++ b/src/styles/components/custom-orders.scss
@@ -1,6 +1,10 @@
+.co-container {
+  max-width: 1800px;
+}
+
 .co-news-page__container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
   width: 100%;
   height: 100%;
@@ -35,7 +39,11 @@
 
   @include mq($from: tablet-wide) {
     float: right;
-    width: 32%;
+    width: 31%;
+  }
+  @include mq($from: desktop) {
+    float: right;
+    width: 24%;
   }
 
   &:hover {
@@ -52,38 +60,53 @@
 }
 
 .co-images {
+  max-width: 270px;
+  margin: 0 auto;
   position: relative;
   outline: 1px solid #000;
   font-size: 0;
   background-color: #f6f6f6;
 
   .co-photo {
-    height: 300px;
+    height: 320px;
+    max-height: 550px;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
+
+    @include mq($from: phablet) {
+      height: 350px;
+    }
+    @include mq($from: tablet-wide) {
+      height: 400px;
+    }
+  }
+
+  @include mq($from: tablet-wide) {
+    max-width: 500px;
   }
 }
 
 .co-product__name {
   margin: 0;
-  padding-top: 10px;
+  padding-top: 20px;
   font-weight: 600;
   font-size: 20px;
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: center;
   text-align: start;
   height: 30px;
   word-spacing: 0;
 
   @include mq($from: tablet-wide) {
-    font-size: 21px;
+    font-size: 18px;
+    justify-content: center;
   }
 }
 
 .co-characteristic {
   margin: 0;
-  margin-top: 10px;
+  margin-top: 20px;
   line-height: 1;
   font-weight: 600;
   word-spacing: 0;
@@ -108,7 +131,7 @@
 }
 
 .co-info {
-  line-height: 1.3;
+  line-height: 1.5;
   font-size: 15px;
   word-spacing: 0;
 
@@ -117,8 +140,9 @@
   }
 
   @include mq($from: tablet-wide) {
-    font-size: 18px;
-    line-height: 1.4;
-    word-spacing: 5px;
+    font-size: 15px;
+    line-height: 1.3;
+    word-spacing: 3px;
+    padding: 0 10px;
   }
 }
