--- a/src/styles/components/news.scss
+++ b/src/styles/components/news.scss
@@ -99,6 +99,10 @@
     object-fit: cover;
     opacity: 0.9;
   }
+
+  .news__img--img {
+    object-fit: contain;
+  }
 }
 
 .news__content-container {
