--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@
 @import './components/featured';
 @import './components/swiper';
 @import './components/partners';
+@import './components/about-us';
 @import './components/map';
 @import './components/i-footer';
 @import './components/footer__bootom';
@@ -52,3 +53,4 @@
 @import './components/communication';
 @import './components/button-slip';
 @import './components/custom-orders.scss';
+@import './components/ukraine-stands.scss';
