--- a/src/styles/components/partners.scss
+++ b/src/styles/components/partners.scss
@@ -18,3 +18,123 @@
 	background-repeat: no-repeat;
 	opacity: .2;
 }
+
+// Partners Slider Section
+.partners-slider-section {
+	width: 100%;
+	padding: 40px 0;
+	background-color: #ffffff;
+	overflow: hidden;
+	margin-bottom: 0;
+
+	@include mq($from: phablet) {
+		padding: 50px 0;
+	}
+
+	@include mq($from: tablet) {
+		padding: 60px 0;
+	}
+
+	@include mq($from: desktop) {
+		padding: 70px 0;
+	}
+}
+
+.partners-slider-wrapper {
+	width: 100%;
+	overflow: hidden;
+	position: relative;
+}
+
+.partners-slider-track {
+	display: flex;
+	animation: scroll-partners 60s linear infinite;
+	width: fit-content;
+	gap: 40px;
+	padding: 0 20px;
+
+	@include mq($from: phablet) {
+		gap: 50px;
+		padding: 0 30px;
+	}
+
+	@include mq($from: tablet) {
+		gap: 60px;
+		padding: 0 40px;
+	}
+
+	@include mq($from: desktop) {
+		gap: 80px;
+		padding: 0 50px;
+	}
+}
+
+.partners-slider-item {
+	flex-shrink: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: calc((100vw - 40px - 40px) / 2);
+	min-width: 120px;
+	height: 80px;
+	opacity: 0.7;
+	transition: opacity 0.3s ease;
+
+	&:hover {
+		opacity: 1;
+	}
+
+	@include mq($from: phablet) {
+		width: calc((100vw - 100px - 100px) / 3);
+		min-width: 140px;
+		height: 90px;
+	}
+
+	@include mq($from: tablet) {
+		width: calc((100vw - 120px - 180px) / 4);
+		min-width: 150px;
+		height: 100px;
+	}
+
+	@include mq($from: tablet-wide) {
+		width: calc((100vw - 140px - 200px) / 5);
+		min-width: 160px;
+		height: 110px;
+	}
+
+	@include mq($from: desktop) {
+		width: calc((100vw - 260px - 400px) / 6);
+		min-width: 150px;
+		max-width: 200px;
+		height: 120px;
+	}
+
+	@include mq($from: desktop-wide) {
+		width: calc((100vw - 320px - 400px) / 6);
+		min-width: 180px;
+		max-width: 220px;
+		height: 130px;
+	}
+}
+
+.partners-slider-img {
+	max-width: 100%;
+	max-height: 100%;
+	width: auto;
+	height: auto;
+	object-fit: contain;
+	transition: filter 0.3s ease;
+
+	.partners-slider-item:hover & {
+		filter: grayscale(0%);
+	}
+}
+
+@keyframes scroll-partners {
+	0% {
+		transform: translateX(0);
+	}
+	100% {
+		transform: translateX(-50%);
+	}
+}
