--- a/src/styles/components/ware.scss
+++ b/src/styles/components/ware.scss
@@ -4,7 +4,7 @@
   margin: 0 10px;
   padding-bottom: 40px;
 
-  padding-top: 30px;
+  padding-top: 15px;
 
   @include mq($from: phablet) {
     margin: 0;
@@ -12,59 +12,96 @@
 }
 
 .ware__box {
+  display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
   margin-top: 30px;
+  margin-bottom: 30px;
+  
+    width: 100%;
 
   @include mq($from: phablet) {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    gap: 10px;
   }
 
   @include mq($from: tablet-wide) {
     margin-top: 40px;
-    flex-wrap: nowrap;
-    gap: 10px;
+    justify-content: space-between;
+    
+  }
+
+  @include mq($from: desktop) {
+    justify-content: center;
   }
 }
 
 .ware__card {
+  
   position: relative;
   transition: all 0.35s ease-in-out;
-  margin: 0 auto;
-  margin-bottom: 30px;
-  // max-width: 400px;
+  margin: 0 0;
+  height: 300px;
+  width: 100%;
+  margin-bottom: 20px;
+  transition: all 0.35s ease-in-out;
+  border-radius: 10px;
 
   &:hover {
     transition: all 0.35s ease-in-out;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    transform: scale(1.03);
+    transition: all 0.35s ease-in-out;
+    
   }
 
+  
+
   @include mq($from: phablet) {
-    width: 47%;
+    width: 49%;
+    margin-bottom: 0;
   }
 
   @include mq($from: desktop) {
-    width: 30vw;
-    max-width: 570px;
+    max-height: 550px;
+    height: auto;
+  }
+}
+
+.ware__content {
+  height: 300px;
+  
+  @include mq($from: desktop) {
+    height: 100%;
   }
 }
 
 .ware__img {
   width: 100%;
+  height: 300px;
   object-fit: cover;
+  border-radius: 10px;
+  
 
-  @include mq($from: desktop) {
-    height: 300px;
+  @include mq($from: desktop) { 
+    height: auto;
+    max-height: 550px;
   }
 
   @include mq($from: tablet-wide) {
     border-radius: 0;
+    border-radius: 10px;
   }
 }
 
 .ware__figcaption {
-  padding: 30px 0;
-  background-color: #ffffff;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  
+
+  &::hover {
+  }
 }
 
 .ware__content {
@@ -72,36 +109,84 @@
 }
 
 .ware__name {
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: 60px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90px;
-    border-top: 3px #d1a954 double;
-  }
+  
 }
 
 .ware__name-link {
-  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  color: #ffffff;
+  z-index: 2;
+  
+  
+}
+
+.ware__name-link::before,
+.ware__name-link::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  transition: opacity 0.35s ease-in-out;
+  z-index: -1;
+  border-radius: 10px;
+}
+
+.ware__name-link::before {
+  background: linear-gradient(
+    0deg,
+    rgba(51, 51, 51, 0.45),
+    rgba(51, 51, 51, 0.38)
+  );
+  opacity: 1;
+  border-radius: 10px;
+}
+
+.ware__name-link::after {
+  background: linear-gradient(
+    0deg,
+    rgba(43, 43, 43, 0.774),
+    rgba(51, 51, 51, 0.38)
+  );
+  opacity: 0;
+  border-radius: 10px;
+}
+
+.ware__card:hover .ware__name-link::after {
+  opacity: 1;
+}
+
+.ware__card:hover .ware__name-link::before {
+  opacity: 0;
+}
+
+.ware__name-text {
+  position: absolute;
+  width: 90%;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   font-size: 16px;
   font-weight: 600;
-  text-align: center;
-  color: #404044;
-  transition: all 0.35s ease-in-out;
+  text-transform: uppercase;
+  border-radius: 10px;
 
   &::after {
     content: '';
     position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+    bottom: -20px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    border-top: 3px #d1a954 double;
   }
 
-  &:hover {
-    transition: all 0.35s ease-in-out;
-    color: rgba(0, 0, 0, 0.61);
+  @include mq($from: desktop) { 
+    font-size: 25px;
+    bottom: 60px;
   }
 }
