Add testimonials section with PDF viewer modal

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,3 +54,4 @@
 @import './components/button-slip';
 @import './components/custom-orders.scss';
 @import './components/ukraine-stands.scss';
+@import './components/testimonials';
