--- a/src/styles/components/about-us.scss
+++ b/src/styles/components/about-us.scss
@@ -23,6 +23,7 @@
 	flex-direction: column;
 	background-color: #f6f6f6;
 	padding-top: 30px;
+	padding-bottom: 30px;
 
 	@include mq($from: tablet) {
 		flex-direction: row;
@@ -93,12 +94,23 @@
 
 
 	p {
+		position: relative;
 		margin-bottom: 15px;
 
 		&:last-child {
 			margin-bottom: 0;
 		}
 	}
+
+	// .about-us__text-item::after {
+	// 	content: "";
+	// 	position: absolute;
+	// 	bottom: 0;
+	// 	left: 0;
+	// 	width: 100px;
+	// 	border-top: 1px #d1a954 solid;
+	// }
+
 
 	@include mq($from: phablet) {
 		font-size: 14px;
