--- a/src/styles/components/testimonials.scss
+++ b/src/styles/components/testimonials.scss
@@ -2,12 +2,12 @@
 .testimonials {
   background-color: #f6f6f6;
   color: #404044;
-  padding: 60px 0;
-  margin-top: 40px;
+  padding: 30px 0;
+  padding-bottom: 50px;
 
   @include mq($from: tablet-wide) {
-    margin-top: 60px;
-    padding: 80px 0;
+    padding: 30px 0;
+    padding-bottom: 50px;
   }
 }
 
